# poke-api-excercice

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: berry_controller.py
app/models/: berry_model.py  berry_stats_model.py
app/repositories/: berry_repository.py
app/services/: berry_service.py
app/templates/: histogram_template.html
app/utils/: histogram.py
ebextensions/: 01_fastapi.config  02_env.config  03_logging.config
tests/: test_berry_repository.py  test_berry_service.py
